--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Rnative",
-    "slug": "Rnative",
+    "name": "FotografAlbumu",
+    "slug": "FotografAlbumu",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
